<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_picture"
            android:icon="@mipmap/cross"
            android:title="@string/picture" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@mipmap/cross"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav_cartoon"
            android:icon="@mipmap/cross"
            android:title="@string/cartoon" />
        <item
            android:id="@+id/nav_article"
            android:icon="@mipmap/cross"
            android:title="@string/article" />
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/cross"
            android:title="@string/news" />
    </group>

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/about"
            android:title="@string/about" />
    </group>

</menu>
